# polybrain-core

./: .gitignore  Cargo.toml  README.md  polybrain_settings.json  pyproject.toml  run.py  temp_script.py
extension/: README.md  assistant.css  manifest.json
extension/images/: logo.psd
extension/scripts/: content.js
python-client/: __init__.py  client.py  server_types.py
src/: main.rs  util.rs
src/chain/: chain.rs  chain_entry.rs  mod.rs  util.rs
src/chain/agents/: executive_planner.rs  mathematician.rs  mod.rs  onpy_agent.rs  pessimist.rs  preliminary_reporter.rs
src/chain/agents/prompts/: executive_planner_main.md  onpy_agent_error.md  onpy_agent_main.md  onpy_input_prompt.md  pessimist_main.md  pessimist_summarizer.md  preliminary_reporter_main.md
src/chain/tools/: misc.rs  mod.rs  report_tool.rs  thought_tool.rs  user_input_tool.rs
src/polybrain/: __init__.py  audio.py  client.py  entry.py  interpreter.py  tools.py  util.py
src/polybrain/api/: auth.py  host.py  model.py  session.py
src/polybrain/assets/: onpy_guide.md  prompt.md
src/polybrain/code_runner/: run.py
src/polybrain/core/: audio.py  client.py  entry.py  tools.py
src/server/: auth.rs  background.rs  codec.rs  dispatch.rs  error.rs  html_error.html  mod.rs  types.rs
