[package]
name = "polybrain-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.117"
serde = {version="1.0.203", features = ["derive"]}
uuid = { version = "1.8.0", features = ["v4", "fast-rng"]}
tokio-util = { version = "0.6", features = ["codec"] }
bytes = "1"
futures = "0.3.30"
